[workspace]
members = [
    "bin",
    "crates/app",
    "crates/assets",
    "crates/components",
    "crates/ecs",
    "crates/editor",
    "crates/graphics",
    "crates/input",
    "crates/math",
    "crates/time",
    "crates/window"
]

resolver = "3"

[workspace.dependencies]
winit = { version = "0.30.13" }
wgpu = { version = "29.0.3" }
hecs = { version = "0.11.0" }
glam = { version = "0.33.0"}
anyhow = { version = "1.0.102" }
rayon = { version = "1.12.0" }
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = { version = "0.4.0" }

tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

app = { package = "app", path = "crates/app" }
graphics = { package = "graphics", path = "crates/graphics" }
input = { package = "input", path = "crates/input" }
math = { package = "math", path = "crates/math" }
components = { package = "components", path = "crates/components" }
time = { package = "time", path = "crates/time" }
window = { package = "window", path = "crates/window" }
editor = { package = "editor", path = "crates/editor" }
ecs = { package = "ecs", path = "crates/ecs" }
assets = { package = "assets", path = "crates/assets" }
