[workspace]
members = [
    "bin",
    "crates/kodanu_app",
    "crates/kodanu_assets",
    "crates/kodanu_scene",
    "crates/kodanu_ecs",
    "crates/kodanu_editor",
    "crates/kodanu_graphics",
    "crates/kodanu_input",
    "crates/kodanu_math",
    "crates/kodanu_time",
    "crates/kodanu_transform",
    "crates/kodanu_window",
    "crates/kodanu_camera",
    "crates/kodanu_color",
    "crates/kodanu_log",
    "crates/kodanu",
    "crates/kodanu_culling",
    "crates/kodanu_scheduler",
]

resolver = "3"

[workspace.dependencies]
winit = { version = "0.30.13" }
wgpu = { version = "30.0.0" }
hecs = { version = "0.11.0" }
glam = { version = "0.33.1"}

anyhow = { version = "1.0.103" }
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = { version = "0.4.0" }
bitflags = { version = "2.13.0" }

tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

hashbrown = { version = "0.17.1" }

kodanu_app = { package = "kodanu_app", path = "crates/kodanu_app" }
kodanu_graphics = { package = "kodanu_graphics", path = "crates/kodanu_graphics" }
kodanu_input = { package = "kodanu_input", path = "crates/kodanu_input" }
kodanu_math = { package = "kodanu_math", path = "crates/kodanu_math" }
kodanu_scene = { package = "kodanu_scene", path = "crates/kodanu_scene" }
kodanu_time = { package = "kodanu_time", path = "crates/kodanu_time" }
kodanu_window = { package = "kodanu_window", path = "crates/kodanu_window" }
kodanu_editor = { package = "kodanu_editor", path = "crates/kodanu_editor" }
kodanu_ecs = { package = "kodanu_ecs", path = "crates/kodanu_ecs" }
kodanu_assets = { package = "kodanu_assets", path = "crates/kodanu_assets" }
kodanu_transform = { package = "kodanu_transform", path = "crates/kodanu_transform" }
kodanu_camera = { package = "kodanu_camera", path = "crates/kodanu_camera" }
kodanu_color = { package = "kodanu_color", path = "crates/kodanu_color" }
kodanu_log = { package = "kodanu_log", path = "crates/kodanu_log" }
kodanu = { package = "kodanu", path = "crates/kodanu" }
kodanu_culling = { package = "kodanu_culling", path = "crates/kodanu_culling" }
kodanu_scheduler = { package = "kodanu_scheduler", path = "crates/kodanu_scheduler" }
