[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }

window = { package = "window", path = "../window" }
graphics = { package = "graphics", path = "../graphics" }
input = { package = "input", path = "../input" }
math = { package = "math", path = "../math" }
