[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

window = { workspace = true }
graphics = { workspace = true }
input = { workspace = true }
math = { workspace = true }
time = { workspace = true }
editor = { workspace = true }
scene = { workspace = true }
components = { workspace = true }
