[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/_lib.rs"

[dependencies]
winit = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

window = { workspace = true }
graphics = { workspace = true }
input = { workspace = true }
math = { workspace = true }
time = { workspace = true }
editor = { workspace = true }
components = { workspace = true }
assets = { workspace = true }
codanu_transform = { workspace = true }
