[package]
name = "kodanu_graphics"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/_lib.rs"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
bitflags = { workspace = true }

kodanu_window = { workspace = true }
kodanu_math = { workspace = true }
kodanu_assets = { workspace = true }
kodanu_scene = { workspace = true }
kodanu_transform = { workspace = true }
kodanu_editor = { workspace = true }
